# giuva-romania-official

./: .gitignore  PROJECT_AUDIT.md  R3-001_GIUVA_ENTERPRISE_PLATFORM_MASTER_ARCHITECTURE.md  README.md  docker-compose.yml  eslint.config.mjs  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tall  tsconfig.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260704_0001_initial_platform_schema.py  20260704_0002_add_organizations_memberships.py  20260704_0003_add_programs_projects_participation.py  20260704_0004_add_enterprise_foundation_ef.py  20260704_0005_add_governance_foundation_gh.py  20260704_0006_add_ai_gkms_foundation.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/core_node/: __init__.py  architecture.py  configuration.py
backend/app/db/: base.py  session.py
backend/app/local_node/: __init__.py  configuration.py  node.py
backend/app/middleware/: __init__.py
backend/app/models/: __init__.py  ai_gkms_foundation.py  civil_response.py  enterprise_foundation.py  enums.py  governance_foundation.py  journey.py  partner.py  (+5 more)
backend/docs/: R3_FINAL_FOUNDATION_SUMMARY.md  R3_FOUNDATION_BLOCK_A.md  R3_FOUNDATION_BLOCK_B.md  R3_FOUNDATION_BLOCK_C.md  R3_FOUNDATION_BLOCK_D.md  R3_FOUNDATION_BLOCK_EF.md  R3_FOUNDATION_BLOCK_GH.md  R3_FOUNDATION_BLOCK_I.md  RELEASE_2_FEDERATED_ARCHITECTURE.md  RELEASE_3_MODULE_ENGINE.md
(+281 files in other folders)
