[project]
name = "giuva-api"
version = "0.1.0"
description = "FastAPI backend for GIUVA.RO community platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.6",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.7.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.20",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.34.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
